# TSBK03

./: Svar
Lab0/: CMakeLists.txt  lab0  lab0.c  lab0.frag  lab0.vert
lab1-1/: add.frag  lab1-1  lab1-1.c  lowpass.frag  phong.frag  thres.frag
lab1-2/: lab1-2  lab1-2.c  lab1-2.frag  lab1-2.vert
lab2/: shader.vert  shader2.vert  skinning  skinning.c  skinning2  skinning2.c
lab3/: lab3  lab3.c
lab4/: SpriteLight.h  lab4  lab4.c
